@@ -11,6 +11,8 @@ NEW:
 FIXED:
   Fixed Fusion Chamber not dropping when mined.
   Fixed Ores that drop an item not being affected by Pickaxes with the Fortune effect.
+  Finally added the Job system. Now the Magic Infuser and Circuit Fabricator
+    (machines with more than 1 input slot) will now show their Time Remaining correctly.
   More recipe advancement fixes.
 
 
